# tauri-rails-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  STYLE.md  package-lock.json  package.json
.github/workflows/: desktop.yml
desktop/: Cargo.toml  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: bundle.rs  commands.rs  error.rs  health.rs  lib.rs  process.rs  ruby.rs  state.rs
launcher/: index.html  loading.css
scripts/: bundle-macos-arm64.sh  bundle-macos-x86_64.sh  generate-icons.sh
scripts/lib/: bundle_common.sh
webapp/: .rubocop.yml  Gemfile
webapp/app/views/layouts/: application.html.erb
webapp/app/views/posts/: index.html.erb
webapp/config/: application.rb  cable.yml  cache.yml  credentials.yml.enc  database.yml  queue.yml  recurring.yml
webapp/config/environments/: desktop.rb
webapp/db/: schema.rb
