[package]
name = "app"
version = "0.1.0"
description = "tauri-rails-kit desktop shell"
authors = []
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-log = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
thiserror        = "1"
tokio            = { version = "1", features = ["full"] }
reqwest          = { version = "0.11", features = ["json"] }
libc             = "0.2"
log              = "0.4"
